[package]
name = "image-annotator"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", features = ["wgpu"]}
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["svg"] }
image = "0.25.9"
imageproc = "0.26.0"
log = "0.4.29"
tiny-skia = "0.12.0"
ab_glyph = "0.2.32"
font-kit = "0.14.3"
